openshift/pipeline/deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: feedback
  labels:
    app: feedback
spec:
  selector:
    matchLabels:
      app: feedback
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: feedback
    spec:
      containers:
        - name: feedback
          image: IMAGE
          ports:
          - containerPort: 8000
            name: theport
          command: ["/bin/sh"]
          args: ["-c", "python ./manage.py migrate && python ./manage.py runserver 0.0.0.0:8000"]
          startupProbe:
            httpGet:
              path: /healthz
              port: 8000
              httpHeaders:
              - name: Accept
                value: application/json
            initialDelaySeconds: 3
            periodSeconds: 3
            failureThreshold: 10
          livenessProbe:
            httpGet:
              path: /healthz
              port: 8000
              httpHeaders:
              - name: Accept
                value: application/json
            initialDelaySeconds: 2
            periodSeconds: 2
            failureThreshold: 10
          readinessProbe:
            httpGet:
              path: /healthz
              port: 8000
              httpHeaders:
              - name: Accept
                value: application/json
            initialDelaySeconds: 3
            periodSeconds: 3
            failureThreshold: 10
      restartPolicy: Always

---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: feedback-celery
  labels:
    app: feedback-celery
spec:
  selector:
    matchLabels:
      app: feedback-celery
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: feedback-celery
    spec:
      containers:
        - name: feedback
          image: IMAGE
          command: ["/bin/sh"]
          args: ["-c", "celery -A smartfeedback worker -l INFO"]
      restartPolicy: Always

---

apiVersion: v1
kind: Service
metadata:
  name: feedback
  labels:
    app: feedback
spec:
  ports:
    - name: port8000
      port: 8000
      targetPort: 8000
  selector:
    app: feedback
  type: LoadBalancer

---

apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: feedback
  labels:
    app: feedback
spec:
  path: /
  to:
    kind: Service
    name: feedback
    weight: 100
  port:
    targetPort: port8000
  tls:
    termination: edge
